tests/snapshots/drift_autofix_snapshot_tests__drift_case_eks_cluster_version.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_eks_cluster.main",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "version": "1.28"
        },
        "before": {
          "version": "1.27"
        }
      },
      "mode": "managed",
      "name": "main",
      "type": "aws_eks_cluster"
    }
  ]
}
