tests/snapshots/drift_autofix_snapshot_tests__drift_case_elb_health_check_parameters.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_lb.app",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "health_check": {
            "interval": 10,
            "timeout": 3
          }
        },
        "before": {
          "health_check": {
            "interval": 30,
            "timeout": 5
          }
        }
      },
      "mode": "managed",
      "name": "app",
      "type": "aws_lb"
    }
  ]
}
