tests/snapshots/drift_autofix_snapshot_tests__drift_case_force_replacement_due_to_drift.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_instance.critical",
      "change": {
        "actions": [
          "delete",
          "create"
        ],
        "after": {
          "availability_zone": "us-east-1b",
          "instance_type": "t3.medium"
        },
        "before": {
          "availability_zone": "us-east-1a",
          "instance_type": "t3.medium"
        }
      },
      "mode": "managed",
      "name": "critical",
      "type": "aws_instance"
    }
  ]
}
