tests/snapshots/drift_autofix_snapshot_tests__drift_case_glue_crawler_schedule.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_glue_crawler.data",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "schedule": "cron(0 0 * * ? *)"
        },
        "before": {
          "schedule": "cron(0 12 * * ? *)"
        }
      },
      "mode": "managed",
      "name": "data",
      "type": "aws_glue_crawler"
    }
  ]
}
