tests/snapshots/drift_autofix_snapshot_tests__drift_case_iam_policy_drift.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_iam_role.app",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "assume_role_policy": "{\"Version\":\"2012-10-17\",\"Statement\":[]}"
        },
        "before": {
          "assume_role_policy": "{\"Version\":\"2012-10-17\"}"
        }
      },
      "mode": "managed",
      "name": "app",
      "type": "aws_iam_role"
    }
  ]
}
