tests/snapshots/drift_autofix_snapshot_tests__drift_case_import_existing_resource.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_s3_bucket.existing",
      "change": {
        "actions": [
          "no-op"
        ],
        "after": {
          "bucket": "my-existing-bucket"
        },
        "before": {
          "bucket": "my-existing-bucket"
        }
      },
      "mode": "managed",
      "name": "existing",
      "type": "aws_s3_bucket"
    }
  ]
}
