tests/snapshots/drift_autofix_snapshot_tests__drift_case_lifecycle_ignore_changes.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_instance.ignore_tags",
      "change": {
        "actions": [
          "no-op"
        ],
        "after": {
          "instance_type": "t3.medium",
          "tags": {
            "manual": "tag"
          }
        },
        "before": {
          "instance_type": "t3.medium",
          "tags": {
            "manual": "tag"
          }
        }
      },
      "mode": "managed",
      "name": "ignore_tags",
      "type": "aws_instance"
    }
  ]
}
