tests/snapshots/drift_autofix_snapshot_tests__drift_case_manual_tag_changes.snap
---
source: tests/drift_autofix_snapshot_tests.rs
expression: plan
---
{
  "format_version": "1.0",
  "resource_changes": [
    {
      "address": "aws_instance.tagged",
      "change": {
        "actions": [
          "update"
        ],
        "after": {
          "tags": {
            "CostCenter": "engineering",
            "Environment": "prod",
            "Name": "production-server"
          }
        },
        "before": {
          "tags": {
            "Environment": "prod",
            "Name": "production-server"
          }
        }
      },
      "mode": "managed",
      "name": "tagged",
      "type": "aws_instance"
    }
  ]
}
